Improvements to the CoC team

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -78,7 +78,7 @@ title: Code of Conduct
     <img class="img-fluid rounded-circle object-cover w-72 h-72 mx-auto" src="{{ member.image }}" alt="{{ member.name }}">
   </div>
   <div class="col-md-9 ps-lg-4">
-    <h4 class="font-bold text-xl mb-1 text-purple-700">&#128100; {{ member.name }} - {{ member.title }}</h4>
+    <h4 class="font-bold text-xl mb-1 text-purple-700">{{ member.name }}</h4>
     <p class="fs-6 my-3 font-semibold">{{ member.position }}</p>
     <small class="d-block mb-4">{{ member.about | markdownify }}</small>
     <ul class="list-unstyled mb-0">
