Fix EPFL code of conduct link

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -15,7 +15,7 @@ title: Code of Conduct
 <div class="coc-justify">
 
 <h1>Code of Conduct</h1>
-<p>Scala Days is governed by the <a href="https://www.scala-lang.org/conduct/">Scala Code of Conduct</a> and the <a href="https://www.epfl.ch/about/overview/values-and-ethics/code-of-conduct/">EPFL Code of Conduct</a>. We are committed to providing a safe, welcoming, and inclusive environment for all participants.</p>
+<p>Scala Days is governed by the <a href="https://www.scala-lang.org/conduct/">Scala Code of Conduct</a> and the <a href="https://www.epfl.ch/about/respect/">EPFL Code of Conduct</a>. We are committed to providing a safe, welcoming, and inclusive environment for all participants.</p>
 
 <h2>What to Report</h2>
 <ul>
