Specify the list of unwanted behavior. Specify the ways to report.

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -18,11 +18,18 @@ title: Code of Conduct
 <p>Scala Days is governed by the <a href="https://www.scala-lang.org/conduct/">Scala Code of Conduct</a> and the <a href="https://www.epfl.ch/about/respect/">EPFL Code of Conduct</a>. We are committed to providing a safe, welcoming, and inclusive environment for all participants.</p>
 
 <h2>What to Report</h2>
+<p>This list is illustrative, not exhaustive. Any behavior that undermines safety, dignity or inclusion may be addressed under the Code of Conduct.</p>
 <ul>
-  <li>Harassment of any kind</li>
-  <li>Physical aggression</li>
-  <li>Unwanted sexual attention</li>
-  <li>Discriminatory language or behavior</li>
+  <li>Violence or threats of violence (verbal or physical)</li>
+  <li>Sexist, racist, homophobic, transphobic, ableist, or otherwise discriminatory language</li>
+  <li>Personal insults, especially related to identity (e.g. gender, orientation, race, religion, disability)</li>
+  <li>Inappropriate or non-consensual physical contact</li>
+  <li>Unwanted sexual attention, jokes, or comments</li>
+  <li>Posting or displaying sexually explicit or violent material</li>
+  <li>Doxing (sharing personal or identifying information without consent)</li>
+  <li>Deliberate intimidation, stalking, or following</li>
+  <li>Repeated disruption of talks or group interactions</li>
+  <li>Encouraging or defending any of the above behaviors</li>
 </ul>
 <p>If you experience or witness any of the above, we encourage you to report it.</p>
 
@@ -32,7 +39,6 @@ title: Code of Conduct
 </p>
 <ul>
   <li>Scan the QR code at the venue to access a <a href="{{ site.data.code_of_conduct.report-form-url }}" target="_blank" rel="noopener noreferrer">Google Form</a>.</li>
-  <li>Fill in a paper form at the venue.</li>
   <li>Report directly to a <a href="#coc-team">team member</a>.</li>
 </ul>
 
