--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -50,7 +50,7 @@ title: Code of Conduct
 <ol>
   <li><strong>What happened?</strong> A behavior that violates the Code of Conduct occurs.</li>
   <li><strong>Who can report?</strong> Victim, witness, volunteer, or organizer.</li>
-  <li><strong>How to report?</strong> Fill out a form (paper or digital). Assistance available on site if needed.</li>
+  <li><strong>How to report?</strong> Fill out a form. Assistance available on site if needed.</li>
   <li><strong>What information is collected?</strong>
     <ul>
       <li>Type of behavior</li>
@@ -68,7 +68,7 @@ title: Code of Conduct
       <li>🚫 Exclusion from the event or community space</li>
       <li>📝 Referral to legal authorities if applicable</li>
     </ul>
-    <p>All decisions are made with confidentiality, proportionality, and the safety of the community in mind.</p>
+    <p>All decisions are made with confidentiality, proportionality, and the safety of the community and the individual in mind.</p>
   </li>
 </ol>
 
