Add bathroom policy to CoC

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -16,6 +16,7 @@ title: Code of Conduct
 
 <h1>Code of Conduct</h1>
 <p>Scala Days is governed by the <a href="https://www.scala-lang.org/conduct/">Scala Code of Conduct</a> and the <a href="https://www.epfl.ch/about/respect/">EPFL Code of Conduct</a>. We are committed to providing a safe, welcoming, and inclusive environment for all participants.</p>
+<p>At the conference venues, participants are free to use bathrooms based on their own self-declared gender identity. A non-binary person is allowed to use any bathrooms.</p>
 
 <h2>What to Report</h2>
 <p>This list is illustrative, not exhaustive. Any behavior that undermines safety, dignity or inclusion may be addressed under the Code of Conduct.</p>
